--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <p>123, negoro lane, Alberquiqe</p>
     <hr>
     <footer>
-        <a href="/">Back to portfolio</a>
+        <a href="/Portfolio/">Back to portfolio</a>
         &lt;Puneet&gt;
     </footer>
 </body>
