--- a/birthday.html
+++ b/birthday.html
@@ -20,5 +20,5 @@
     <a href="https://beta.maps.apple.com/?address=1996%2C+Bipin+Chandra+Pal+Marg%2C+Block+K%2C+Chittaranjan+Park%2C+New+Delhi%2C+110019%2C+India&auid=5890285498837117684&ll=28.539829%2C77.243282&lsp=9902&q=Fish+Market+Cr+Park">Maps</a>
 
     <hr>
-    <a href="/">Back to portfolio</a>
+    <a href="/Portfolio/">Back to portfolio</a>
 </body>
