--- a/movies.html
+++ b/movies.html
@@ -24,7 +24,7 @@
         </main>
         <footer>
             <hr>
-            <p><a href="/">Back to portfolio</a></p>
+            <p><a href="/Portfolio/">Back to portfolio</a></p>
             &lt;&lt;&lt;Puneet&gt;&gt;&gt;
         </footer>
     </body>
