--- a/solution.html
+++ b/solution.html
@@ -9,7 +9,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eius nostrum mollitia non natus necessitatibus, voluptates, atque, cum iure earum nam numquam. Sequi voluptate iusto pariatur expedita dolores amet iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sint omnis eos quibusdam ad sed modi hic non id temporibus dicta ut, distinctio possimus nesciunt odit atque delectus deserunt provident?</p>
     <hr>
     <footer>
-        <p><a href="/">Back to portfolio</a></p>
+        <p><a href="/Portfolio/">Back to portfolio</a></p>
         &lt;Puneet&gt;
     </footer>
 </body>
