adding new website and improving connectivity

--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
     <title>My portfolio</title>
 </head>
 <body>
-
-    <h1>My portfolio website</h1>
-    <h2>I am a coder</h2>
-    <hr>
-    <h3>Check my projects out</h3>
-    <h3>
-        <a href="birthday.html">My birthday invite</a>
-    </h3>
-    <h3>
-        <a href="movies.html">My top 5 movies</a>
-    </h3>
+    <header>
+        <h1>My portfolio website</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#work">My work</a></li>
+                <li><a href="#know">Get to know me more</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+    <section id="about">
+        <h2>I am a coder</h2>
+    </section>
         <hr>
-    &lt;&lt;&lt;Puneet&gt;&gt;&gt; <a href="solution.html">About me</a> <a href="contact.html">Contact me</a>
+    <section id="work">
+        <h3>Check my projects out</h3>
+
+        <h3><a href="birthday.html">My birthday invite</a></h3>
+
+        <h3><a href="movies.html">My top 5 movies</a></h3>
+    </section>
+        <hr>
+    <section id="resume">
+        <h4>Check out my resume <a href="resume.html">here</a></h4>
+    </section>
+    </main>
+    <footer id="know">
+        &lt;&lt;&lt;Puneet&gt;&gt;&gt; <a href="about.html">About me</a> <a href="contact.html">Contact me</a>
+    </footer>
 </body>
 </html>
