--- a/movies.html
+++ b/movies.html
@@ -22,9 +22,9 @@
         <h3>Intersteller</h3>
         <p>Oooooh space movieeee</p>
         </main>
+        <hr>
         <footer>
-            <hr>
-            <p><a href="/Portfolio/">Back to portfolio</a></p>
+            <p><a href="index.html">Back to portfolio</a></p>
             &lt;&lt;&lt;Puneet&gt;&gt;&gt;
         </footer>
     </body>
